[package]
name = "sshslc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
warp = {version = "0.4.2", features = ["server"] }
once_cell = "1.21.3"
ssh-key = { version = "0.6.7", features = ["getrandom", "rsa", "ed25519"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
